<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/OneOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/OneTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/OneThree"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/OneFour"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/TwoOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/TwoTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/TwoThree"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/TwoFour"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/ThreeOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/ThreeTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/ThreeThree"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/ThreeFour"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/FourOne"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:text="@string/FourTwo"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/FourThree"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/border"
            android:text="@string/FourFour"
            android:textAlignment="center"
            android:textColor="@color/white"
            tools:ignore="TextContrastCheck"
            android:layout_margin="1dp" />
    </LinearLayout>

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button01"/>

</LinearLayout>
